--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -433,3 +433,14 @@ year = "2010",
 author = "Garrett E. Barter and David L. Darmofal"
 }
 
+@article{tadmor_minimum_entropy_principle,
+title = "A minimum entropy principle in the gas dynamics equations ",
+journal = "Applied Numerical Mathematics ",
+volume = "2",
+number = "3–5",
+pages = "211 - 219",
+year = "1986",
+author = "Eitan Tadmor",
+}
+
+
