--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -250,11 +250,9 @@ Ideally this will give the correct energy partitioning between kinetic and inter
 the resulting entropy production will not be equivalent to that of the true shock and the numerical scheme, if conservative, may even create a train of 
 oscillations in the solution, radiating away from the shock/viscous layer, and whose gradients will indeed attempt to produce an entropy production equivalent 
 to that of the shock jump. One needs to properly set the viscosity coefficient along with the jump conditions for the given mesh size in order 
-to produce a monotonic increase through the viscous layer with as little smearing as possible, but with entropy production matching that of the true shock.
+to produce a monotonic solution increase through the viscous layer with as little smearing as possible, but with entropy production matching that of the true shock.
 Tadmor \cite{tadmor_minimum_entropy_principle} gives an alternative statement (more useful for constructing numerical methods and proofs) of the minimum 
-entropy principle by transforming the Lagrangian statement above into that of an Eulerian reference frame.
-Tadmor [appl. num. math. 2 (1986) 211-219] gives an alternative statement (more useful for constructing numerical methods and proofs) of the entropy minimum 
-principle by transforming the Lagrangian statement above into that of an Eulerian reference frame.  Further discussion may be found in Guermond and Popov \cite{jlg}.
+entropy principle by transforming the Lagrangian statement above into that of an Eulerian reference frame. Further discussion may be found in Guermond and Popov \cite{jlg}.
 }
 %%
 
