--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -128,7 +128,7 @@
   }
 
 @conference{jlg3,
-  title   = "Entropy-based nonlinear viscosity for Fourrier approximations of conservation laws",
+  title   = "Entropy-based nonlinear viscosity for Fourier approximations of conservation laws",
   booktitle = "C.R. Math. Acad. Sci.",
   volume = "326",
   pages   = "801-806",
@@ -146,7 +146,7 @@ address   = "Basel"
 }
 
 @book{Toro,
-  author    = "E F Toro",
+  author    = "E. F. Toro",
   title     = "Riemann Solvers and numerical methods for fluid dynamics",
   year      = "1999",
   publisher = "$2^{nd}$ Edition, Springer",
@@ -154,9 +154,12 @@ address   = "Basel"
 
 @article{jlg,
   title   = "Viscous regularization of the {E}uler equations and entropy principles",
-  author  = "J L Guermond and B Popov",
-  journal = "under review",
-  year    = "2012",
+  author  = "J.-L. Guermond and B. Popov",
+  journal = "SIAM J. Appl. Math.",
+  volume  = "74",
+  number  = "2",
+  pages   = "284-305",
+  year    = "2014",
   }
 
 @article{MOOSE,
