--- a/reviews/reviewer-3.tex
+++ b/reviews/reviewer-3.tex
@@ -164,7 +164,7 @@ Thank you for pointing out the above references. We have added these references 
 
 {
 \color{blue}
-5. The bounding viscosity is actually larger than upwind, it is Rusunov or
+5. The bounding viscosity is actually larger than upwind, it is Rusanov or
 Local Lax-Friedrichs viscosity determined by the largest wave speed in the
 system. This could become very large and potentially damaging as the
 flow becomes low-Mach. Is this problem encountered? Or is it mitigated?
