--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -111,7 +111,7 @@
 
 @article{jlg1,
   title   = "Entropy viscosity method for nonlinear conservation laws",
-  author  = "J L Guermond and R Pasquetti",
+  author  = "J.-L. Guermond and R. Pasquetti",
   journal = "Journal of Comput. Phys",
   volume  = "230",
   pages   = "4248-4267",
@@ -120,7 +120,7 @@
 
 @article{jlg2,
   title   = "Entropy Viscosity Method for High-Order Approximations of Conservation Laws",
-  author  = "J L Guermond and R Pasquetti",
+  author  = "J.-L. Guermond and R. Pasquetti",
   journal = "Lecture Notes in Computational Science and Engineering",
   volume  = "76",
   pages   = "411-418",
@@ -134,7 +134,7 @@
   pages   = "801-806",
   year    = "2008",
   address = "Paris",
-  author  = "J L Guermond and R Pasquetti",
+  author  = "J.-L. Guermond and R. Pasquetti",
   }
 
 @book{Leveque,
@@ -164,7 +164,7 @@ address   = "Basel"
 
 @article{MOOSE,
   title   = "A parallel computational framework for coupled systems of nonlinear equations",
-  author  = "D Gaston and C Newsman and G Hansen and D Lebrun-Grandie",
+  author  = "D. Gaston and C. Newsman and G. Hansen and D. Lebrun-Grandi\'e",
   journal = "Nucl. Eng. Design",
   volume  = "239",
   pages   = "1768-1778",
@@ -173,7 +173,7 @@ address   = "Basel"
 
 @article{JFNK,
   title   = "Jacobian-free {N}ewton-{K}rylov methods: a survey of approaches and applications",
-  author  = "D A Knoll and D E Keyes",
+  author  = "D. A. Knoll and D. E. Keyes",
   journal = "Journal of Computational Physics",
   volume  = "193",
   pages   = "357-397",
@@ -182,7 +182,7 @@ address   = "Basel"
   
 @article{SEM,
   title   = "The discrete equation method ({DEM}) for fully compressible, two-phase flows in ducts of spatially varying cross section",
-  author  = "R Berry and R Saurel and O LeMetayer",
+  author  = "R. Berry and R. Saurel and O. LeMetayer",
   journal = "Nuclear Engineering and Design",
   volume  = "240",
   pages   = "3797-3818",
@@ -191,7 +191,7 @@ address   = "Basel"
 
 @article{Parabolic,
   title   = "On positivity preserving finite volume schemes for {E}uler equations",
-  author  = "B Perthane and C W Shu",
+  author  = "B. Perthane and C-W Shu",
   journal = "Numer. Math.",
   volume  = "73",
   pages   = "119-130",
@@ -199,7 +199,7 @@ address   = "Basel"
   }
 
 @book{IGEOS,
-  title   = "{A} to {Z} of {T}hermodynamics",
+  title   = "A to Z of Thermodynamics",
   author = "P Perrot",
   year      = "1998",
   publisher = "Oxford University Press",
@@ -219,6 +219,7 @@ address   = "Basel"
   author  = "A Lapidus",
   journal = "J. Comput. Phys.",
   volume  = "2",
+  number = "2",
   pages   = "154-177",
   year    = "1967",
   }
@@ -308,7 +309,7 @@ Mechanic.",
   }
 
 @article{Muller,
-  title   = "Low-Mach number asymptotics of the Navier-Stokes equations",
+  title   = "Low-{M}ach number asymptotics of the Navier-Stokes equations",
   author  = "B M\''uller",
   journal = "Journal of Engineering Mathematics",
   volume  = "34",
@@ -335,7 +336,7 @@ Mechanic.",
 
   
 @article{nozzle_exact,
-  title   = "Liquid and liquid-gas flows at all speeds.",
+  title   = "Liquid and liquid-gas flows at all speeds: Reference solutions and numerical schemes.",
   author  = "S LeMartelot and B Nkonga and R Saurel",
   journal = "Journal of Computational Physics",
   volume  = "255",
@@ -427,7 +428,7 @@ author = "J. Reisner and J. Serencsa and S. Shkoller"
 
 
 @article{darmofal2010,
-title = "Shock capturing with PDE-based artificial viscosity for DGFEM: Part I. Formulation ",
+title = "Shock capturing with {PDE}-based artificial viscosity for {DGFEM}: Part I. Formulation ",
 journal = "Journal of Computational Physics ",
 volume = "229",
 number = "5",
