--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -448,3 +448,15 @@ author = "Eitan Tadmor",
 }
 
 
+@incollection{guermond_thompson,
+year={2015},
+isbn={978-3-319-14447-4},
+booktitle={Direct and Large-Eddy Simulation IX},
+volume={20},
+series={ERCOFTAC Series},
+editor={Fr\"ohlich, Jochen and Kuerten, Hans and Geurts, Bernard J. and Armenio, Vincenzo},
+title={Validation of an Entropy-Viscosity Model for Large Eddy Simulation},
+publisher={Springer International Publishing},
+author={Guermond, J.-L. and Larios, A. and Thompson, T.},
+pages={43-48},
+}
