--- a/reviews/editor-letter-after-review-2.tex
+++ b/reviews/editor-letter-after-review-2.tex
@@ -38,7 +38,7 @@ Thank you for the latest review of our manuscript and your appreciation for the 
 Please find attached  a revised version of our manuscript entitled
 ``Entropy-based viscous regularization for the multi-dimensional Euler equations in low-Mach and transonic flows''
 by M. Delchini, J. Ragusa, and R. Berry for
-publication in Computers \& Fluids. We appreciate the comments of the reviewers as we
+publication in Computers \& Fluids. We appreciate the comments of the reviewer as we
 believe they have allowed us to improve the paper.
 
 We have attached a file of detailed responses for the new Reviewer \#3.
