--- a/reviews/reviewer-3.tex
+++ b/reviews/reviewer-3.tex
@@ -80,6 +80,8 @@ successful per the comments of that reviewer. A few issue remain
 unaddressed and I will highlight these below.
 }
 
+Thank you.
+
 \bigskip
 
 {
@@ -120,9 +122,10 @@ Computational Physics 222.1 (2007): 246-264.}
 
 Thank you for these references. In these articles, an artificial viscosity is added to the momentum
 and energy equations only, by means of grid-dependent viscosity coefficients. These techniques share some common thread with
-the entropy viscosity technique and we have added some references to them in the introduction between lines 26 and 28.
-However, as Guermond \& Popov have shown in our References \cite{jlg1, jlg2}, viscosity should also be added to the continuity equation and, in that sense, the entropy-viscosity method differ from the others.\\
-We are also aware of some of ongoing work to employ the entropy-viscosity technique for turbulence modeling \tcr{Travis Thomson dissertation} and added such a reference \tcr{Do it}. \tcb{not done}
+the entropy viscosity technique and we have added some references to them in the introduction. % between lines 26 and 28.
+However, as Guermond \& Popov have shown in Refs. 13 \& 14, viscosity should also be added to the continuity equation and, 
+in that sense, the entropy-viscosity method differ from the others.\\
+We are also aware of some of ongoing work to employ the entropy-viscosity technique for turbulence modeling (Ref. 15).
  %understanding of the work of Cook and Cabot is that it was developed for both shock and turbulence capturing. The entropy viscosity method seems to be a good candidate for turbulence capturing as well . However, since this paper does not deal with turbulence capturing but only with shock capturing, we feel that the reader might get confused by adding the above references.
 \bigskip
 
@@ -138,7 +141,8 @@ conditions for shocks." Communications on pure and applied mathematics
 29.3 (1976): 297-322. 
 }
 
-We added the two above references to the introduction in line 17. We had initially referenced Leveque's work. Thank you for pointing this out.
+We added the two above references to the introduction. % in line 17. 
+We had initially referenced Leveque's work. Thank you for pointing this out.
 \bigskip
 
 
@@ -158,7 +162,7 @@ for linearly degenerate waves in capturing schemes." Journal of
 Computational Physics 227.14 (2008): 6985-7002.
 }
 
-Thank you for pointing out the above references. We have added these references to the paper in the numerical results section in line 359. \tcr{will need to highlight this in the final PDF we re-submit}
+Thank you for pointing out the above references. We have added these references to the paper in the numerical results section in line 577.
 \bigskip
 
 
@@ -176,7 +180,7 @@ would seem to be the relevant one for the dynamics.
 We have adopted this terminology for the bounding viscosity. This is more natural and
 will help the reader. \\
 You are correct that only using this bounding viscosity for low-Mach flows is inappropriate.  
-The bounding viscosity is expected to kick in only in shocks; elsewhere the entropy viscosity is always orders of magnitude lower. Since this is only an upper bound, there are no issues in low-Mach flows. We have added a sentence to emphasize this in line 493.
+The bounding viscosity is expected to kick in only in shocks; elsewhere the entropy viscosity is always orders of magnitude lower. Since this is only an upper bound, there are no issues in low-Mach flows. We have added a sentence to emphasize this in lines 166 and 535.
 \bigskip
 
 
@@ -210,22 +214,24 @@ We improved the quality of the 2-D plots that are presented in the numerical res
 numerical accuracy and order of convergence of the method would be
 quite welcome.
 }
-The compression corner yields a steady-state solution whose analytical pre- and post-shocks values are known. 
-We compared our numerical simulation values against these values and show excellent agreement. 
-We did not perform any convergence order as an analytical solution is not available \tcr{not true. also check at what angle a Mach stem begins}. 
-\tcr{I do not want to use a fine mesh numerical solution as reference because I cannot be assured it will be a good
-enough reference to do a convergence study. what do you think?\\} \tcb{we can probably run the code with a very fine mesh but it will take time and we are not sure that it will be fine enough to do the convergence test.\\}
-Likewise, from potential flow theory, we know the exact value of the velocity at the top of the cylinder for the flow around a 
-cylinder problem; we compared our numerical values with the exact ones and they are in excellent agreement.
-With the meshes used, we have obtained an pressure variation that is exactly proportional to Mach$^2$, as expected from the theory.
-%We could have performed a convergence test by using a numerical solution from a fine mesh as a reference and see if we recover the expected order of convergence, as it is done for some of the 1-d tests in the paper. \\
 
-The test of a flow over a hump is the only test we do not have an exact solution for \tcr{is there one?}. \tcb{you can only compare against the numerical solution from an incompressible code (in the low-Mach limit).}
-This test is often used in the literature to assess the symmetry of the steady-state solution when plotting the iso-Mach line 
-for low-Mach flows. This is also commonly used for other test such as the NACA wing in \cite{LowMach1}.
+The compression corner test case has a steady-state solution whose analytical pre- and post-shocks states are known. 
+In our manuscript, we already compared our numerical simulation values against these values and show excellent agreement. 
+In this revision, we also performed a convergence study for this problem and observed convergence rates of 1 and 1/2
+when measured in the L1 and L2 norms, respectively. 
+
+
+%From potential flow theory, we know the exact value of the velocity at the top of the cylinder for the flow around a 
+%cylinder problem; we compared our numerical values with the exact ones and they are in excellent agreement.
+%With the meshes used, we have obtained an pressure variation that is exactly proportional to Mach$^2$, as expected from the theory.
+%%We could have performed a convergence test by using a numerical solution from a fine mesh as a reference and see if we recover the expected order of convergence, as it is done for some of the 1-d tests in the paper. \\
+%
+%The ``flow over a hump'' test case is often used in the literature to assess the symmetry of the steady-state solution when plotting the iso-Mach line 
+%for low-Mach flows. This is also commonly used for other test such as the NACA wing in Ref. 20.
+
 \bigskip
 
-\bibliography{mybibfile}
+%\bibliography{mybibfile}
 
 \end{document}
 
