corrected a typo in equation 48

--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -2021,7 +2021,7 @@ are similar to those used for the standard Euler equations \cite{jlg}. Some of t
 %
 \begin{equation}
 \label{eq:ent_res_app}
-A \rho \left( \partial_t s + \vec{u} \cdot \grad s \right) = s_e \left[ \div\vec{h} + \mathbb{g}: \grad vec{u} + \left( \frac{u^2}{2}-e \right) \div\vec{f}\right] 
+A \rho \left( \partial_t s + \vec{u} \cdot \grad s \right) = s_e \left[ \div\vec{h} + \mathbb{g}: \grad \vec{u} + \left( \frac{u^2}{2}-e \right) \div\vec{f}\right] 
 + \rho s_{\rho} \div\vec{f}\,. 
 \end{equation}
 %
